objects/ASI_CRM_KR_PVA__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_KR_Account_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Code</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>VPAs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_KR_Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand</label>
        <referenceTo>ASI_KOR_Brand__c</referenceTo>
        <relationshipLabel>PVAs</relationshipLabel>
        <relationshipName>PVAs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_KR_Channel__c</fullName>
        <label>Channel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_KR_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_KR_External_ID_Upload__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External ID(Upload)</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_CRM_KR_Outlet_Image__c</fullName>
        <label>Outlet Image</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Leading</fullName>
                </value>
                <value>
                    <fullName>Premium</fullName>
                </value>
                <value>
                    <fullName>Main Stream</fullName>
                </value>
                <value>
                    <fullName>Iconic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_KR_PVA_Actual__c</fullName>
        <formula>CASE(ASI_CRM_KR_PVA__c , 
 &quot;P&quot;, VALUE(&quot;1&quot;), 
 &quot;V&quot;, VALUE(&quot;2&quot;),
 &quot;A&quot;,VALUE(&quot;3&quot;), VALUE(&quot;&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PVA Actual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_KR_PVA__c</fullName>
        <label>PVA</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>P</fullName>
                </value>
                <value>
                    <fullName>V</fullName>
                </value>
                <value>
                    <fullName>A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>PVA</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_KR_Brand__c</columns>
        <columns>ASI_CRM_KR_Channel__c</columns>
        <columns>ASI_CRM_KR_Outlet_Image__c</columns>
        <columns>ASI_CRM_KR_PVA__c</columns>
        <columns>ASI_CRM_KR_Check__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>ASI_CRM_KR_External_ID_Upload__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_KR_PVA__c.ASI_CRM_KR_PVA</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_KR_PVA</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_KR_Brand__c</columns>
        <columns>ASI_CRM_KR_Channel__c</columns>
        <columns>ASI_CRM_KR_Outlet_Image__c</columns>
        <columns>ASI_CRM_KR_PVA__c</columns>
        <columns>ASI_CRM_KR_Check__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>ASI_CRM_KR_External_ID_Upload__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_KR_PVA__c.ASI_CRM_KR_PVA</value>
        </filters>
        <label>All KR PVA</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_KOR</roleAndSubordinates>
            <roleAndSubordinates>ASI_KOR_I_T_Admin</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_KR_TOT_PVA</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_KR_Brand__c</columns>
        <columns>ASI_CRM_KR_Channel__c</columns>
        <columns>ASI_CRM_KR_Outlet_Image__c</columns>
        <columns>ASI_CRM_KR_PVA__c</columns>
        <columns>ASI_CRM_KR_Check__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>ASI_CRM_KR_External_ID_Upload__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_KR_PVA__c.ASI_CRM_KR_PVA</value>
        </filters>
        <filters>
            <field>ASI_CRM_KR_Channel__c</field>
            <operation>equals</operation>
            <value>TOT</value>
        </filters>
        <label>All KR TOT PVA</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_KOR</roleAndSubordinates>
            <roleAndSubordinates>ASI_KOR_I_T_Admin</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>PVA-{0000}</displayFormat>
        <label>PVA Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PVAs</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_KR_PVA</fullName>
        <active>true</active>
        <label>ASI CRM KR PVA</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>